--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "npm-run-all": "^4.1.2",
     "prettier": "^1.11.1",
     "react-dom": "^16.3.0",
+    "react-powerplug": "^0.1.5",
     "ts-jest": "^22.4.2",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
