--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react": "^16.3.0"
   },
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": ">= 0.14.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.9",
