--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dev": "libundler watch --ts",
     "build": "libundler build --ts --sourcemap",
     "build:prod": "yarn build --compress",
-    "prebuild:prod": "yarn run fix:prettier",
+    "prebuild:prod": "yarn run fix",
     "test": "cross-env NODE_ENV=test jest",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"src/**/*.{ts,tsx}\" --write",
+    "fix:tslint": "tslint -p ./",
     "release": "np",
     "prerelease": "yarn build:prod"
   },
@@ -42,22 +43,22 @@
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.2",
     "@types/jest": "^22.2.3",
-    "@types/react": "^16.3.13",
-    "cross-env": "^5.1.4",
+    "@types/react": "^16.3.14",
+    "cross-env": "^5.1.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
     "libundler": "^1.6.4",
-    "lint-staged": "^7.0.5",
+    "lint-staged": "^7.1.0",
     "np": "^2.20.1",
-    "npm-run-all": "^4.1.2",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.12.1",
     "react-dom": "^16.3.2",
     "react-powerplug": "^0.1.5",
-    "ts-jest": "^22.4.4",
-    "ts-node": "^6.0.1",
-    "tslint": "^5.9.1",
+    "ts-jest": "^22.4.5",
+    "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.12.0",
     "typescript": "^2.8.3"
   },
