Move react to peer dependency

--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
   ],
   "dependencies": {
     "hoist-non-react-statics": "^2.5.0",
-    "react": "^16.3.2",
     "react-display-name": "^0.2.4"
   },
   "peerDependencies": {
-    "react": ">= 0.14.0"
+    "react": "^16.3.2"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.10",
